--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,19 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
-        </dependencies>
+		 <dependency>
+		 	<groupId>org.springframework.cloud</groupId>
+		 	<artifactId>
+		 		spring-cloud-starter-netflix-eureka-client
+		 	</artifactId>
+		 </dependency>
+		 <dependency>
+		 	<groupId>org.springframework.cloud</groupId>
+		 	<artifactId>
+		 		spring-cloud-starter-netflix-hystrix
+		 	</artifactId>
+		 </dependency>
+	</dependencies>
        
         
     
@@ -164,4 +176,15 @@
 		<finalName>app</finalName>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Greenwich.SR3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
